--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -5,14 +5,9 @@
     android:id="@+id/mainPageFragmentContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.MainActivity">
+    tools:context=".ui.auth.MainActivity">
 
-    <Button
-        android:id="@+id/logut"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Logut"
-        />
+
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
